--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-background-image": "^1.5.0",
     "gatsby-image": "^3.2.0",
     "gatsby-plugin-image": "^1.2.1",
+    "gatsby-plugin-netlify": "^3.5.0",
     "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-sharp": "^3.2.1",
     "gatsby-plugin-sitemap": "^3.2.0",
