Update configs for Netlify

--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "gatsby-background-image": "^1.5.0",
     "gatsby-image": "^3.2.0",
     "gatsby-plugin-image": "^1.2.1",
+    "gatsby-plugin-manifest": "^3.5.0",
     "gatsby-plugin-netlify": "^3.5.0",
     "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-remove-fingerprints": "^0.0.2",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^3.2.1",
     "gatsby-plugin-sitemap": "^3.2.0",
     "gatsby-plugin-styled-components": "^4.2.0",
